potential fix of overlapping sr-blocks

--- a/components/showroom/style.css
+++ b/components/showroom/style.css
@@ -3,56 +3,27 @@
         min-height: 300vh;
 
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         justify-content: center;
     }
 
     #showroom .column {
         position: relative;
-
         width: 50vw;
-        min-height: calc(300vh + 300px);
+        height: 300vh;
     }
-
 
 
 
     #showroom .column .block {
-
         position: relative;
-        width: 100%;
+        width: 80%;
         height: 100vh;
 
         display: flex;
         align-items: center;
-        justify-content: left;
-
-    }
-
-    #showroom .column .block .content {
-
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
         justify-content: center;
-
-
-        gap: 20px;
-
-        width: 30vw;
-        text-align: left;
     }
-
-    #showroom .column .block .content .font-h3 {
-        color: var(--accent);
-    }
-
-    #showroom .column .block .content .font-text {
-        font-size: 36px;
-
-        color: var(--black);
-    }
-
 
     #showroom .column .block-1 {
         position: sticky;
@@ -163,10 +134,6 @@
 
         background-image: url("../../media/distridoc.png");
         background-size: contain;
-    }
-
-    #showroom .column .block-2 {
-        margin-top: 300px;
     }
 }
 
